@startuml Bid and AutoBid Class Diagram

title Bid and AutoBid - Class Diagram

' ============================================
' BID CONTROLLER LAYER
' ============================================
class BidController {
    + PlaceBid(auctionId: int, request: BidRequestDto): BidResultDto
    + GetRecentBids(auctionId: int, limit: int): List<BidDto>
    + GetHighestBid(auctionId: int): decimal?
    + GetBiddingHistory(bidderId: int, page: int, pageSize: int): PaginatedResultB<BiddingHistoryDto>
    + GetDistinctBidders(auctionId: int): List<int>
}

' ============================================
' AUTO BID CONTROLLER LAYER
' ============================================
class AutoBidController {
    + CreateOrUpdate(dto: CreateAutoBidDto): AutoBidDto
    + Get(auctionId: int, userId: int): AutoBidDto
    + Deactivate(auctionId: int, userId: int): void
    + GetBidIncrement(currentPrice: decimal): decimal
}

' ============================================
' BID SERVICE LAYER (INTERFACE)
' ============================================
interface IBidService {
    + PlaceBidAsync(auctionId: int, bidderId: int, amount: decimal, isAutoBid: bool): BidResultDto
    + GetRecentBidsAsync(auctionId: int, limit: int): List<BidDto>
    + GetHighestBidAsync(auctionId: int): decimal?
    + GetBiddingHistoryAsync(bidderId: int, page: int, pageSize: int): PaginatedResultB<BiddingHistoryDto>
    + GetDistinctBidderIdsByAuctionAsync(auctionId: int): List<int>
}

' ============================================
' AUTO BID SERVICE LAYER (INTERFACE)
' ============================================
interface IAutoBidService {
    + CreateOrUpdateAutoBidAsync(auctionId: int, userId: int, maxAmount: decimal): AutoBidDto
    + DeactivateAutoBidAsync(auctionId: int, userId: int): bool
    + GetAutoBidAsync(auctionId: int, userId: int): AutoBidDto?
    + ProcessAutoBidsAfterBidAsync(auctionId: int, currentBidderId: int, currentBid: decimal): void
    + CalculateBidIncrement(currentPrice: decimal): decimal
}

' ============================================
' BID SERVICE LAYER (IMPLEMENTATION)
' ============================================
class BidService {
    + PlaceBidAsync(auctionId: int, bidderId: int, amount: decimal, isAutoBid: bool): BidResultDto
    + GetRecentBidsAsync(auctionId: int, limit: int): List<BidDto>
    + GetHighestBidAsync(auctionId: int): decimal?
    + GetBiddingHistoryAsync(bidderId: int, page: int, pageSize: int): PaginatedResultB<BiddingHistoryDto>
    + GetDistinctBidderIdsByAuctionAsync(auctionId: int): List<int>
}

' ============================================
' AUTO BID SERVICE LAYER (IMPLEMENTATION)
' ============================================
class AutoBidService {
    + CreateOrUpdateAutoBidAsync(auctionId: int, userId: int, maxAmount: decimal): AutoBidDto
    + DeactivateAutoBidAsync(auctionId: int, userId: int): bool
    + GetAutoBidAsync(auctionId: int, userId: int): AutoBidDto?
    + ProcessAutoBidsAfterBidAsync(auctionId: int, currentBidderId: int, currentBid: decimal): void
    + CalculateBidIncrement(currentPrice: decimal): decimal
}

' ============================================
' BID REPOSITORY LAYER (INTERFACE)
' ============================================
interface IBidRepository {
    + AddAsync(bid: Bid): Bid
    + GetRecentByAuctionAsync(auctionId: int, limit: int): List<Bid>
    + GetBidsByBidderAsync(bidderId: int, skip: int, take: int): List<Bid>
    + GetTotalBidCountByBidderAsync(bidderId: int): int
    + GetDistinctBidderIdsByAuctionAsync(auctionId: int): List<int>
    + GetHighestBidByAuctionAsync(auctionId: int): Bid?
}

' ============================================
' AUTO BID REPOSITORY LAYER (INTERFACE)
' ============================================
interface IAutoBidRepository {
    + GetByAuctionAndUserAsync(auctionId: int, userId: int): AutoBid?
    + CreateOrUpdateAsync(autoBid: AutoBid): AutoBid
    + GetActiveByAuctionAsync(auctionId: int): List<AutoBid>
    + DeactivateAsync(autoBidId: int): bool
}

' ============================================
' BID REPOSITORY LAYER (IMPLEMENTATION)
' ============================================
class BidRepository {
    + AddAsync(bid: Bid): Bid
    + GetRecentByAuctionAsync(auctionId: int, limit: int): List<Bid>
    + GetBidsByBidderAsync(bidderId: int, skip: int, take: int): List<Bid>
    + GetTotalBidCountByBidderAsync(bidderId: int): int
    + GetDistinctBidderIdsByAuctionAsync(auctionId: int): List<int>
    + GetHighestBidByAuctionAsync(auctionId: int): Bid?
}

' ============================================
' AUTO BID REPOSITORY LAYER (IMPLEMENTATION)
' ============================================
class AutoBidRepository {
    + GetByAuctionAndUserAsync(auctionId: int, userId: int): AutoBid?
    + CreateOrUpdateAsync(autoBid: AutoBid): AutoBid
    + GetActiveByAuctionAsync(auctionId: int): List<AutoBid>
    + DeactivateAsync(autoBidId: int): bool
}

' ============================================
' DATA TRANSFER OBJECTS (DTOs)
' ============================================
class BidDto {
    + BidderId: int
    + BidderName: string?
    + Amount: decimal
    + BidTime: DateTime
}

class BidRequestDto {
    + BidderId: int
    + Amount: decimal
}

class BidResultDto {
    + AuctionId: int
    + CurrentBid: decimal
    + BidCount: int
    + PlacedBid: BidDto
}

class BiddingHistoryDto {
    + BidId: int
    + AuctionId: int
    + ItemTitle: string
    + ItemImages: string?
    + CategoryName: string?
    + YourBid: decimal
    + BidTime: DateTime
    + Status: string
    + CurrentBid: decimal?
    + EndTime: DateTime?
    + AuctionStatus: string?
    + IsAutoBid: bool
}

class PaginatedResultB<T> {
    + Data: List<T>
    + TotalCount: int
    + Page: int
    + PageSize: int
}

class AutoBidDto {
    + Id: int
    + AuctionId: int
    + UserId: int
    + MaxAmount: decimal
    + IsActive: bool
    + CreatedAt: DateTime?
}

class CreateAutoBidDto {
    + AuctionId: int
    + UserId: int
    + MaxAmount: decimal
}

' ============================================
' DOMAIN MODELS
' ============================================
class Bid {
    + Id: int
    + AuctionId: int
    + BidderId: int
    + Amount: decimal
    + BidTime: DateTime?
    + IsAutoBid: bool?
}

class AutoBid {
    + Id: int
    + AuctionId: int
    + UserId: int
    + MaxAmount: decimal
    + IsActive: bool?
    + CreatedAt: DateTime?
}

' ============================================
' RELATIONSHIPS
' ============================================

' Controller to Service Interface
BidController ..> IBidService : depends on
AutoBidController ..> IAutoBidService : depends on

' Service Interface to Service Implementation
IBidService <|.. BidService : realizes
IAutoBidService <|.. AutoBidService : realizes

' Service to Repository Interface
BidService ..> IBidRepository : depends on
AutoBidService ..> IAutoBidRepository : depends on
BidService ..> IAutoBidService : uses (for auto bid processing)

' Repository Interface to Repository Implementation
IBidRepository <|.. BidRepository : realizes
IAutoBidRepository <|.. AutoBidRepository : realizes

' Repository to Domain Model
BidRepository ..> Bid : uses
AutoBidRepository ..> AutoBid : uses

' Service to DTOs
BidService ..> BidDto : returns
BidService ..> BidResultDto : returns
BidService ..> BidRequestDto : accepts
BidService ..> BiddingHistoryDto : returns
BidService ..> PaginatedResultB : returns
AutoBidService ..> AutoBidDto : returns
AutoBidService ..> CreateAutoBidDto : accepts

' Controller to DTOs
BidController ..> BidRequestDto : accepts
BidController ..> BidResultDto : returns
BidController ..> BidDto : returns
BidController ..> BiddingHistoryDto : returns
AutoBidController ..> CreateAutoBidDto : accepts
AutoBidController ..> AutoBidDto : returns

' Domain Model relationships (implicit)
Bid ..> AutoBid : related (via AuctionId)

@enduml

